@@ -14,9 +14,9 @@ import net.minecraft.world.phys.Vec3;
 
 public class ExplosionNukeRayBatched implements IExplosionRay {
 
-    public Map<ChunkPos, List<FloatTriplet>> perChunk = new HashMap<>();
-    public Deque<ChunkPos> orderedChunks = new ArrayDeque<>();
-
+    public Map<ChunkPos, List<FloatTriplet>> perChunk = new HashMap<>(); //for future: optimize blockmap further by using sub-chunks instead of chunks
+    public List<ChunkPos> orderedChunks = new ArrayList<>();
+    private CoordComparator comparator = new CoordComparator();
     int posX;
     int posY;
     int posZ;
@@ -40,8 +40,11 @@ public class ExplosionNukeRayBatched implements IExplosionRay {
         this.strength = strength;
         this.speed = speed;
         this.length = length;
+        // Total number of points
         this.gspNumMax = (int)(2.5 * Math.PI * Math.pow(this.strength, 2));
         this.gspNum = 1;
+
+        // The beginning of the generalized spiral points
         this.gspX = Math.PI;
         this.gspY = 0.0;
     }
@@ -62,6 +65,7 @@ public class ExplosionNukeRayBatched implements IExplosionRay {
         this.gspNum++;
     }
 
+    // Get Cartesian coordinates for spherical coordinates
     private Vec3 getSpherical2cartesian() {
         double dx = Math.sin(this.gspX) * Math.cos(this.gspY);
         double dz = Math.sin(this.gspX) * Math.sin(this.gspY);
@@ -72,18 +76,18 @@ public class ExplosionNukeRayBatched implements IExplosionRay {
     public void collectTip(int count) {
         int amountProcessed = 0;
 
-        while(this.gspNumMax >= this.gspNum){
+        while (this.gspNumMax >= this.gspNum){
             Vec3 vec = this.getSpherical2cartesian();
 
-            int length = (int) (double) strength;
+            int length = (int)Math.ceil(strength);
             float res = strength;
 
             FloatTriplet lastPos = null;
             Set<ChunkPos> chunkCoords = new HashSet<>();
 
-            for(int i = 0; i < length; i++) {
-                if(i > this.length)
-                    break;
+            for (int i = 0; i < length; i++) {
+
+                if (i > this.length) break;
 
                 float x0 = (float) (posX + (vec.x * i));
                 float y0 = (float) (posY + (vec.y * i));
@@ -104,30 +108,40 @@ public class ExplosionNukeRayBatched implements IExplosionRay {
                     res -= (float) Math.pow(masqueradeResistance(level, state, pos), 7.5D - fac);
                 }
 
-                if(res > 0 && block != Blocks.AIR) {
+                if (res > 0 && block != Blocks.AIR) {
                     lastPos = new FloatTriplet(x0, y0, z0);
-                    chunkCoords.add(new ChunkPos(iX >> 4, iZ >> 4));
+                    //all-air chunks don't need to be buffered at all
+                    ChunkPos chunkPos = new ChunkPos(iX >> 4, iZ >> 4);
+                    chunkCoords.add(chunkPos);
                 }
 
-                if(res <= 0 || i + 1 >= this.length || i == length - 1) {
+                if (res <= 0 || i + 1 >= this.length || i == length - 1) {
                     break;
                 }
             }
 
-            for(ChunkPos pos : chunkCoords) {
-                List<FloatTriplet> triplets = perChunk.computeIfAbsent(pos, k -> new ArrayList<>());
+            for (ChunkPos pos : chunkCoords) {
+                List<FloatTriplet> triplets = perChunk.get(pos);
 
-                if (lastPos != null) triplets.add(lastPos);
+                if (triplets == null) {
+                    triplets = new ArrayList<>();
+                    perChunk.put(pos, triplets); //we re-use the same pos instead of using individualized per-chunk ones to save on RAM
+                }
+
+                triplets.add(lastPos);
             }
 
+            // Raise one generalized spiral points
             this.generateGspUp();
+
             amountProcessed++;
-            if(amountProcessed >= count) {
+            if (amountProcessed >= count) {
                 return;
             }
         }
 
         orderedChunks.addAll(perChunk.keySet());
+        orderedChunks.sort(comparator);
 
         isAusf3Complete = true;
     }
@@ -139,10 +153,25 @@ public class ExplosionNukeRayBatched implements IExplosionRay {
         return state.getExplosionResistance(level, pos, null);
     }
 
-    public void processChunk() {
-        if(this.perChunk.isEmpty()) return;
+    public class CoordComparator implements Comparator<ChunkPos> {
 
-        ChunkPos coord = orderedChunks.getFirst();
+        @Override
+        public int compare(ChunkPos o1, ChunkPos o2) {
+
+            int chunkX = ExplosionNukeRayBatched.this.posX >> 4;
+            int chunkZ = ExplosionNukeRayBatched.this.posZ >> 4;
+
+            int diff1 = Math.abs((chunkX - o1.x)) + Math.abs((chunkZ - o1.z));
+            int diff2 = Math.abs((chunkX - o2.x)) + Math.abs((chunkZ - o2.z));
+
+            return diff1 - diff2;
+        }
+    }
+
+    public void processChunk() {
+        if (this.perChunk.isEmpty()) return;
+
+        ChunkPos coord = orderedChunks.get(0);
         List<FloatTriplet> list = perChunk.get(coord);
         Set<BlockPos> toRem = new HashSet<>();
         Set<BlockPos> toRemTips = new HashSet<>();
@@ -150,41 +179,45 @@ public class ExplosionNukeRayBatched implements IExplosionRay {
         int chunkX = coord.x;
         int chunkZ = coord.z;
 
-        int enter = Math.max(Math.min(
+        int enter = Math.min(
                 Math.abs(posX - (chunkX << 4)),
-                Math.abs(posZ - (chunkZ << 4))) - 16, 0);
+                Math.abs(posZ - (chunkZ << 4))) - 16; //jump ahead to cut back on NOPs
 
-        for(FloatTriplet triplet : list) {
+        enter = Math.max(enter, 0);
+
+        for (FloatTriplet triplet : list) {
             float x = triplet.xCoord;
             float y = triplet.yCoord;
             float z = triplet.zCoord;
             Vec3 vec = new Vec3(x - this.posX, y - this.posY, z - this.posZ);
-            double len = vec.length();
-            double pX = vec.x / len;
-            double pY = vec.y / len;
-            double pZ = vec.z / len;
+            double pX = vec.x / vec.length();
+            double pY = vec.y / vec.length();
+            double pZ = vec.z / vec.length();
 
             int tipX = (int) Math.floor(x);
             int tipY = (int) Math.floor(y);
             int tipZ = (int) Math.floor(z);
 
             boolean inChunk = false;
-            for(int i = enter; i < len; i++) {
+            for (int i = enter; i < vec.length(); i++) {
                 int x0 = (int) Math.floor(posX + pX * i);
                 int y0 = (int) Math.floor(posY + pY * i);
                 int z0 = (int) Math.floor(posZ + pZ * i);
 
                 if(x0 >> 4 != chunkX || z0 >> 4 != chunkZ) {
-                    if(inChunk) break;
-                    else continue;
+                    if (inChunk) {
+                        break;
+                    } else {
+                        continue;
+                    }
                 }
 
                 inChunk = true;
 
-                if(!level.isEmptyBlock(new BlockPos(x0, y0, z0))) {
+                if (!level.getBlockState(new BlockPos(x0, y0, z0)).isAir()) {
                     BlockPos pos = new BlockPos(x0, y0, z0);
 
-                    if(x0 == tipX && y0 == tipY && z0 == tipZ) {
+                    if (x0 == tipX && y0 == tipY && z0 == tipZ) {
                         toRemTips.add(pos);
                     }
                     toRem.add(pos);
@@ -192,8 +225,8 @@ public class ExplosionNukeRayBatched implements IExplosionRay {
             }
         }
 
-        for(BlockPos pos : toRem) {
-            if(toRemTips.contains(pos)) {
+        for (BlockPos pos : toRem) {
+            if (toRemTips.contains(pos)) {
                 this.handleTip(pos.getX(), pos.getY(), pos.getZ());
             } else {
                 level.setBlock(pos, Blocks.AIR.defaultBlockState(), 2);
@@ -201,7 +234,7 @@ public class ExplosionNukeRayBatched implements IExplosionRay {
         }
 
         perChunk.remove(coord);
-        orderedChunks.removeFirst();
+        orderedChunks.remove(0);
     }
 
     protected void handleTip(int x, int y, int z) {
@@ -216,7 +249,8 @@ public class ExplosionNukeRayBatched implements IExplosionRay {
     @Override
     public void cacheChunksTick(int time) {
         if (!isAusf3Complete) {
-            collectTip(speed*10);
+            // time ignored here since collectTip() did not implement a time limit
+            collectTip(speed * 10);
         }
     }
 
@@ -224,7 +258,7 @@ public class ExplosionNukeRayBatched implements IExplosionRay {
     public void destructionTick(int time) {
         if (!isAusf3Complete) return;
         long start = System.currentTimeMillis();
-        while(!perChunk.isEmpty() && System.currentTimeMillis() < start + time)
+        while (!perChunk.isEmpty() && System.currentTimeMillis() < start + time)
             processChunk();
     }
 
